# real-estate-price-predictor

./: LICENSE  README.md  app.py  predict.py  pyproject.toml  requirements.txt
model/: SVR_Real_Estate.ipynb  SVR_Real_Estate.py  column_transformer.pkl  scaler_x.pkl  scaler_y.pkl  svr_model.pkl
static/js/: script.js
templates/: index.html
